edit load plan + added routes

--- a/MyApp/src/Load Plan/styles.css
+++ b/MyApp/src/Load Plan/styles.css
@@ -71,6 +71,11 @@ body {
   border-radius: 10px;
 }
 
+#editBtn{
+  font-size: 1.1rem;
+  border-radius: 10px;
+}
+
 #filter-btn{
   --bs-btn-active-border-color: white;
 }
