--- a/MyApp/src/Edit/styles.css
+++ b/MyApp/src/Edit/styles.css
@@ -55,37 +55,17 @@ body {
     font-size: 16px;
 }
 
-#title{
-    font-size: 4.6rem;
-    color: #FA0203;
+#filename{
+    color: red;
+    font-size: 25px;
 }
 
-#subtitle{
-    width: 20rem;
-    font-size: 4.3rem;
-    color: black;
-    line-height:5rem;
-}
-#loadPlanBtn, #kpiBtn {
-    outline: none;
-    box-shadow: none; 
-    background-color: transparent;
-    width: fit-content;
-    font-size: 4.3rem;
-    color: black;
-    line-height: 5rem;
-    border: none; 
-    cursor: pointer; 
-}
-#loadPlanBtn:hover, #kpiBtn:hover {
-    text-decoration: underline; 
-    color: #FA0203; 
+thead{
+    position: sticky;
+    top: 0;
 }
 
-html,
-body{
-    overflow: hidden;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
+#options{
+    font-size: 1.1rem;
+    border-radius: 10px;
+  }
